# irv-autopkg-client

./: .gitignore  DISTRIBUTION.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
irv_autopkg_client/: __init__.py  client.py
irv_autopkg_client/api/boundaries/: get_all_boundary_summaries_v1_boundaries_get.py  get_boundary_by_name_v1_boundaries_name_get.py  search_boundary_v1_boundaries_search_get.py
irv_autopkg_client/api/jobs/: get_status_v1_jobs_job_id_get.py  submit_processing_job_v1_jobs_post.py
irv_autopkg_client/api/probes/: get_liveness_v1_liveness_get.py  get_readiness_v1_readiness_get.py
irv_autopkg_client/api/processors/: get_processors_v1_processors_get.py
irv_autopkg_client/models/: __init__.py  boundary.py  boundary_summary.py  data_package.py  datapackage.py  envelope.py  geo_json.py  geometry.py  job.py  job_group_status.py  job_progress.py  job_result.py  job_status.py  license_.py  package.py  package_summary.py  processor.py  processor_metadata.py  processor_version.py  submitted_job.py
irv_autopkg_client/tests/: test_boundary_geometry  test_boundary_list  test_boundary_search_by_coordinates  test_boundary_search_by_name  test_client.py  test_dataset_list  test_extract  test_extract_list  test_server_liveness  test_server_readiness
