[tool.poetry]
name = "irv-autopkg-client"
version = "0.4.0"
description = "A client for accessing the infra-risk-vis autopackage API"
license = "MIT"
authors = [
    "Fred Thomas <fred.thomas@eci.ox.ac.uk>",
    "Tom Russell <tom.russell@ouce.ox.ac.uk>"
]
readme = "README.md"
keywords = ["climate", "infrastructure", "hazard", "risk", "data", "extract"]
packages = [{ include = "irv_autopkg_client" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28"

[tool.poetry.group.test.dependencies]
vcrpy = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
